NHA-3 Konfigurering for å få testene til å gå.