@@ -23,6 +23,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.17</version>
                 <configuration>
+                    <argLine>-Xms800m -Xmx800m -XX:MaxPermSize=500m</argLine>
                     <!-- Fork every test because it will launch a separate AS instance -->
                     <forkMode>always</forkMode>
                     <systemPropertyVariables>
@@ -36,20 +37,20 @@
                     <redirectTestOutputToFile>false</redirectTestOutputToFile>
                 </configuration>
             </plugin>    
-                <plugin>
-                    <artifactId>maven-war-plugin</artifactId>
-                    <version>2.1.1</version>
-                    <configuration>
-                    	<failOnMissingWebXml>false</failOnMissingWebXml>
-                        <!--
-                        <archive>
-                            <manifestEntries>
-                                <Dependencies>org.jboss.as.naming,org.jboss.as.server,org.jboss.msc</Dependencies>
-                            </manifestEntries>
-                        </archive>
-                        -->
-                    </configuration>
-                </plugin>
+            <plugin>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.1.1</version>
+                <configuration>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                    <!--
+                    <archive>
+                        <manifestEntries>
+                            <Dependencies>org.jboss.as.naming,org.jboss.as.server,org.jboss.msc</Dependencies>
+                        </manifestEntries>
+                    </archive>
+                    -->
+                </configuration>
+            </plugin>
         </plugins>
     </build>           
     <dependencies>
@@ -118,6 +119,12 @@
             <groupId>org.jboss.arquillian.core</groupId>
             <artifactId>arquillian-core-api</artifactId>
             <version>1.1.5.Final</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.transaction</groupId>
+            <artifactId>jta</artifactId>
+            <version>1.1</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
